--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,12 @@ body {
   font-weight: 300;
   font-style: normal;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+* {
+  box-sizing: border-box;
+}
