adding cart context and shopping icon

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 20px 40px;
   font-family: 'Encode Sans Condensed', sans-serif;
   font-weight: 300;
   font-style: normal;
